kled_derive/tests/ui/fails/unknown_type.rs
#[macro_use]
extern crate kled_derive;

#[operator(type = "Fail")]
pub struct Map<ItemOut, UnaryOp> {}

fn main() {}
